# bedlevel

./: flake.nix
frontend/: default.nix  package-lock.json  package.json
frontend/components/: plot.js
frontend/nix/: node-packages.nix
frontend/pages/: index.js
server/: default.nix  pyproject.toml
server/bedlevel/: Printer.py  __main__.py
